--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,96 @@
-jax>=0.4.20
-jaxlib>=0.4.20
-flax>=0.7.5
-optax>=0.1.7
-numpy>=1.24.0
-torch>=2.1.0
-transformers>=4.36.0
-datasets>=2.15.0
-wandb>=0.16.0
-pytest>=7.4.0
-black>=23.12.0
-isort>=5.13.0
-flake8>=6.1.0
+absl-py==2.1.0
+aiohappyeyeballs==2.4.4
+aiohttp==3.11.9
+aiosignal==1.3.1
+annotated-types==0.7.0
+async-timeout==5.0.1
+attrs==24.2.0
+black==24.10.0
+certifi==2024.8.30
+charset-normalizer==3.4.0
+chex==0.1.87
+click==8.1.7
+-e git+https://github.com/Abhinav-Muraleedharan/cram.git@6c1fd2ec06cc31dfa43d97729fc1114fcab7f32b#egg=cram
+-e git+https://github.com/Homebrew/brew@abc0584215659c5a8716d0798ea2801388d01368#egg=Cumulative_Retention_Autoregressive_Models
+datasets==3.1.0
+dill==0.3.8
+docker-pycreds==0.4.0
+etils==1.5.2
+eval_type_backport==0.2.0
+exceptiongroup==1.2.2
+filelock==3.16.1
+flake8==7.1.1
+flax==0.8.5
+frozenlist==1.5.0
+fsspec==2024.9.0
+gitdb==4.0.11
+GitPython==3.1.43
+huggingface-hub==0.26.3
+humanize==4.11.0
+idna==3.10
+importlib_metadata==8.5.0
+importlib_resources==6.4.5
+iniconfig==2.0.0
+isort==5.13.2
+jax==0.4.30
+jaxlib==0.4.30
+Jinja2==3.1.4
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+mccabe==0.7.0
+mdurl==0.1.2
+ml_dtypes==0.5.0
+mpmath==1.3.0
+msgpack==1.1.0
+multidict==6.1.0
+multiprocess==0.70.16
+mypy-extensions==1.0.0
+nest-asyncio==1.6.0
+networkx==3.2.1
+numpy==2.0.2
+opt_einsum==3.4.0
+optax==0.2.4
+orbax-checkpoint==0.6.4
+packaging==24.2
+pandas==2.2.3
+pathspec==0.12.1
+pipdeptree==2.24.0
+platformdirs==4.3.6
+pluggy==1.5.0
+propcache==0.2.1
+protobuf==5.29.1
+psutil==6.1.0
+pyarrow==18.1.0
+pycodestyle==2.12.1
+pydantic==2.10.3
+pydantic_core==2.27.1
+pyflakes==3.2.0
+Pygments==2.18.0
+pytest==8.3.4
+python-dateutil==2.9.0.post0
+pytz==2024.2
+PyYAML==6.0.2
+regex==2024.11.6
+requests==2.32.3
+rich==13.9.4
+safetensors==0.4.5
+scipy==1.13.1
+sentry-sdk==2.19.1
+setproctitle==1.3.4
+six==1.17.0
+smmap==5.0.1
+sympy==1.13.1
+tensorstore==0.1.69
+tokenizers==0.21.0
+tomli==2.2.1
+toolz==1.0.0
+torch==2.5.1
+tqdm==4.67.1
+transformers==4.47.0
+typing_extensions==4.12.2
+tzdata==2024.2
+urllib3==2.2.3
+wandb==0.19.0
+xxhash==3.5.0
+yarl==1.18.3
+zipp==3.21.0
