--- a/environment.yml
+++ b/environment.yml
@@ -3,22 +3,22 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - ca-certificates=2024.11.26
-  - colorama=0.4.6
-  - libcxx=14.0.6
-  - libffi=3.4.4
-  - ncurses=6.4
-  - openssl=3.0.15
-  - pluggy=1.5.0
-  - pytest=8.3.4
-  - python=3.9.20
-  - readline=8.2
-  - setuptools=75.1.0
-  - sqlite=3.45.3
-  - tk=8.6.14
-  - wheel=0.44.0
-  - xz=5.4.6
-  - zlib=1.2.13
+  - ca-certificates=2024.11.26=hca03da5_0
+  - colorama=0.4.6=py39hca03da5_0
+  - libcxx=14.0.6=h848a8c0_0
+  - libffi=3.4.4=hca03da5_1
+  - ncurses=6.4=h313beb8_0
+  - openssl=3.0.15=h80987f9_0
+  - pluggy=1.5.0=py39hca03da5_0
+  - pytest=8.3.4=pyhd8ed1ab_1
+  - python=3.9.20=hb885b13_1
+  - readline=8.2=h1a28f6b_0
+  - setuptools=75.1.0=py39hca03da5_0
+  - sqlite=3.45.3=h80987f9_0
+  - tk=8.6.14=h6ba3021_0
+  - wheel=0.44.0=py39hca03da5_0
+  - xz=5.4.6=h80987f9_1
+  - zlib=1.2.13=h18a0788_1
   - pip:
       - absl-py==2.1.0
       - aiohappyeyeballs==2.4.4
